tests/specs/test/hooks_error_handling/main.out
Check file:///Users/ib/dev/deno/tests/specs/test/hooks_error_handling/main.ts
running 1 test from ./main.ts
test should not run ...
------- output -------
beforeAll hook running
----- output end -----
test should not run ... FAILED ([WILDCARD])

 ERRORS 

test should not run => ./main.ts:16:6
error: Error: beforeAll hook failed
  throw new Error("beforeAll hook failed");
        ^
    at Object.fn (file:///Users/ib/dev/deno/tests/specs/test/hooks_error_handling/main.ts:7:9)

 FAILURES 

test should not run => ./main.ts:16:6

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed